tests/ui/trait-bounds/unstable-trait-suggestion.stderr
error[E0277]: the trait bound `T: Unstable` is not satisfied
  --> $DIR/unstable-trait-suggestion.rs:13:9
   |
LL |     foo(t)
   |     --- ^ the trait `Unstable` is not implemented for `T`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/unstable-trait-suggestion.rs:9:11
   |
LL | fn foo<T: Unstable>(_: T) {}
   |           ^^^^^^^^ required by this bound in `foo`
help: consider restricting type parameter `T` with unstable trait `Unstable`
   |
LL | pub fn demo<T: Unstable>(t: T) {
   |              ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
